fix: add gap to content within header

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -59,4 +59,5 @@ ul {
 .links {
   display: flex;
   justify-content: center;
+  gap: 4px;
 }
